--- a/about.html
+++ b/about.html
@@ -41,14 +41,26 @@
                 <h2>Gaming</h2>
                 <p>Of course, as a game developer, I also play games.<br>
                     At the moment, I play a little less because I find making games much more fun.<br>
-                    I've been gaming since I was a kid, when I mostly played on my DS and Wii.<br>
+                    I've been gaming since I was a kid, when I mostly played on my DS and Wii.
                     These days I mostly play on my PC and Switch.<br>
-                    I like building and simulation genres, according to my playtime.<br>
+                    I like building and simulation genres, according to my playtime.
                     But I also enjoy a competitive game every now and then.</p>
             </section>
+
+            <section class="public-appearances">
+                <h2>Public Appearances</h2>
+                <p>On occasion, you’ll find me in a suit, whether I’m attending an event or delivering a speech on stage.<br><br>
+                    During the 2023-2024 academic year, which was my final exam year for my MBO study, I had the honor of speaking at the official opening ceremony. You can check out my <a href="https://www.linkedin.com/posts/bas-de-reus_xr-hololens-mbo-activity-7107302399190413312-Glsz" class="link">LinkedIn post</a> for more details.<br><br>
+                    I also spoke on stage with a former colleague during the XR Innovation Showcases, where we highlighted new projects and prototypes. You can see a recap of the event in this <a href="https://www.linkedin.com/posts/bas-de-reus_aftermovie-xr-innovation-showcases-bekijk-activity-7144137402851196928-Rram" class="link">LinkedIn post</a>, where I speak first in the video.</p>
+            </section>
         </div>
+
+        <!-- <img src="MijnFoto.jpg" alt="Photo of me" class="profile-photo"> -->
         
-        <img src="MijnFoto.jpg" alt="Photo of me" class="profile-photo">
+        <div class="image-content">
+            <img src="MijnFoto.jpg" alt="Photo of me" class="profile-photo">
+            <img src="Podium.png" alt="Photo of me on stage" class="profile-photo-stage">
+        </div>
     </div>
 
     <div id="footer-placeholder"></div>
