--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <div id="navbar-placeholder"></div>
 
     <section class="highlight-project">
-        <a href="Projects/project copy" class="highlight-container">
-            <img src="4by3.png" alt="Highlight Project">
+        <a href="underconstruction" class="highlight-container">
+            <img src="Covers/CaptureGraafsmeer.png" alt="Highlight Project">
             <div class="highlight-info">
-                <h2>Wheater visualizer</h2>
-                <p>A weather visualizer with some game elements. By using a weather API. Big bla bla you see here. The weather could be nice..... or not.</p>
+                <h2>Capture Graafsmeer</h2>
+                <p>Unity GPS mobile game made during MBO exam. Made for the Amsterdam goverment, explore the city with a photobook.</p>
                 <div class="tags">
-                    <span class="tag tag-new">New</span>
                     <span class="tag tag-engine">Unity</span>
                     <span class="tag tag-lang">C#</span>
                 </div>
@@ -38,7 +37,7 @@
         <select id="tag-filter">
             <option value="all">All</option>
             <option value="new">New</option>
-            <option value="engine">Game Engines</option>
+            <!-- <option value="engine">Game Engines</option> --> 
             <option value="lang">Pure code (with framework)</option>
             <option value="unity">Unity</option>
             <!-- <option value="unreal">Unreal</option> -->
@@ -48,6 +47,7 @@
             <!-- <option value="htmlcssjs">HTML/CSS/JS</option> -->
             <option value="xr">XR</option>
             <option value="console">Console</option>
+            <option value="algorithm">Algorithm</option>
             <option value="internship">Internship</option>
             <option value="gamejam">Game jam</option>
         </select>
@@ -55,9 +55,22 @@
 
     <section class="portfolio">
         <div class="project-container">
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp algorithm">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 1">
+                    <img src="Covers/MazeGen2.png" alt="Project 2">
+                    <h2>Maze Generator</h2>
+                    <p>Unity project perfect maze generator with customizable algorithms.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Algorithm</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp">
+                <div class="project">
+                    <img src="Covers/Platypus.png" alt="Project 1">
                     <h2>Platypus</h2>
                     <p>This is a passion project of mine. A platformer with interesting movement options.</p>
                     <div class="tags">
@@ -67,11 +80,37 @@
                 </div>
             </a>
 
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
+            <!-- <a href="underconstruction" class="project-link" data-tags="engine unity csharp new">
                 <div class="project">
                     <img src="4by3.png" alt="Project 2">
-                    <h2>Maze Generator</h2>
-                    <p>Unity project perfect maze generator with customizable algorithms.</p>
+                    <h2>Wheater Visualizer</h2>
+                    <p>A weather visualizer with some game elements. By using a weather API. Big bla bla you see here. The weather could be nice..... or not.</p>
+                    <div class="tags">
+                        <span class="tag tag-new">New</span>
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                    </div>
+                </div>
+            </a> -->
+
+            <a href="underconstruction" class="project-link" data-tags="new lang csharp console">
+                <div class="project">
+                    <img src="Covers/FPS.png" alt="Project 7">
+                    <h2>FPS Manager</h2>
+                    <p>Console app that adjusts your screen's refresh rate based on connected displays.</p>
+                    <div class="tags">
+                        <span class="tag tag-new">New</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Console</span>
+                    </div>
+                </div>
+            </a>            
+
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp">
+                <div class="project">
+                    <img src="Covers/Starfall.jpg" alt="Project 5">
+                    <h2>Operation Starfall</h2>
+                    <p>2.5D Metroidvania Couch Co-op based on the cartoons of 80's Sci-Fi.</p>
                     <div class="tags">
                         <span class="tag tag-engine">Unity</span>
                         <span class="tag tag-lang">C#</span>
@@ -79,9 +118,21 @@
                 </div>
             </a>
 
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp xr internship">
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 3">
+                    <img src="Covers/SKPH.jpg" alt="Project 6">
+                    <h2>Smoll Knight + Horse</h2>
+                    <p>A bachelor admission game. With a medieval setting to play Jousting.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp xr internship">
+                <div class="project">
+                    <img src="Covers/Kara-oke.png" alt="Project 3">
                     <h2>Kara-oké</h2>
                     <p>A VR karaoke game commissioned for AVROTROS, this was made during my internship at XR-Lab!</p>
                     <div class="tags">
@@ -92,72 +143,10 @@
                     </div>
                 </div>
             </a>
-
-            <a href="Projects/project" class="project-link" data-tags="new engine unity csharp">
+            
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp gamejam">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 4">
-                    <h2>Capture Graafsmeer</h2>
-                    <p>Location-based augmented reality mobile game<br>Exam Unity game project</p>
-                    <div class="tags">
-                        <span class="tag tag-new">New</span>
-                        <span class="tag tag-engine">Unity</span>
-                        <span class="tag tag-lang">C#</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 5">
-                    <h2>Operation Starfall</h2>
-                    <p>2.5D Metroidvania Couch Co-op based on the cartoons of 80's Sci-Fi.</p>
-                    <div class="tags">
-                        <span class="tag tag-engine">Unity</span>
-                        <span class="tag tag-lang">C#</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 6">
-                    <h2>Smoll Knight + Horse</h2>
-                    <p>A bachelor admission game. With a medieval setting to play Jousting.</p>
-                    <div class="tags">
-                        <span class="tag tag-engine">Unity</span>
-                        <span class="tag tag-lang">C#</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="new lang csharp console">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 7">
-                    <h2>FPS Manager</h2>
-                    <p>Console app that adjusts your screen's refresh rate based on connected displays.</p>
-                    <div class="tags">
-                        <span class="tag tag-new">New</span>
-                        <span class="tag tag-lang">C#</span>
-                        <span class="tag">Console</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="lang cpp console">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 8">
-                    <h2>Tic tac toe</h2>
-                    <p>A console app where you can play tic-tac-toe with somelse or with the computer.</p>
-                    <div class="tags">
-                        <span class="tag tag-lang">C++</span>
-                        <span class="tag">Console</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 9">
+                    <img src="Covers/TheLostReel.png" alt="Project 9">
                     <h2>The Lost Reel</h2>
                     <p>This is a horro game made for the gamejam "Wanna Jam? 2023". Monster AI with a statemachine.</p>
                     <div class="tags">
@@ -168,35 +157,21 @@
                 </div>
             </a>
 
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
+            <a href="underconstruction" class="project-link" data-tags="lang cpp console">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 10">
-                    <h2>Inner thoughts</h2>
-                    <p>It is a 2D pixel rogue-like, destroying all the eyes that have infiltrated your mind.</p>
+                    <img src="Covers/Tictactoe.png" alt="Project 8">
+                    <h2>Tic tac toe</h2>
+                    <p>A console app where you can play tic-tac-toe with somelse or with the computer.</p>
                     <div class="tags">
-                        <span class="tag tag-engine">Unity</span>
-                        <span class="tag tag-lang">C#</span>
-                        <span class="tag">Game jam</span>
+                        <span class="tag tag-lang">C++</span>
+                        <span class="tag">Console</span>
                     </div>
                 </div>
             </a>
 
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp gamejam">
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp xr internship">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 11">
-                    <h2>Mecco the Chameleon</h2>
-                    <p>Mecco is learning how colors work, so Mecco covers herself in baths with paint to combine the colors.</p>
-                    <div class="tags">
-                        <span class="tag tag-engine">Unity</span>
-                        <span class="tag tag-lang">C#</span>
-                        <span class="tag">Game jam</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="Projects/project" class="project-link" data-tags="engine unity csharp xr internship">
-                <div class="project">
-                    <img src="4by3.png" alt="Project 12">
+                    <img src="Covers/Gpal.png" alt="Project 12">
                     <h2>AR Gpal</h2>
                     <p>We were commissioned to translate GPal's existing app/webapp into an AR environment.</p>
                     <div class="tags">
@@ -208,14 +183,40 @@
                 </div>
             </a>
 
-            <a href="Projects/project" class="project-link" data-tags="lang cpp internship">
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp gamejam">
                 <div class="project">
-                    <img src="4by3.png" alt="Project 13">
+                    <img src="Covers/Mecco.png" alt="Project 11">
+                    <h2>Mecco the Chameleon</h2>
+                    <p>Mecco is learning how colors work, so Mecco covers herself in baths with paint to combine the colors.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Game jam</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="underconstruction" class="project-link" data-tags="lang cpp internship">
+                <div class="project">
+                    <img src="Covers/InControl.png" alt="Project 13">
                     <h2>InControl</h2>
                     <p>InControl is a simulation company that makes and provide simulation in logistics and pedstrain.</p>
                     <div class="tags">
                         <span class="tag tag-lang">C++</span>
                         <span class="tag">Internship</span>
+                    </div>
+                </div>
+            </a>
+
+            <a href="underconstruction" class="project-link" data-tags="engine unity csharp gamejam">
+                <div class="project">
+                    <img src="Covers/Inner_thoughts.png" alt="Project 10">
+                    <h2>Inner thoughts</h2>
+                    <p>It is a 2D pixel rogue-like, destroying all the eyes that have infiltrated your mind.</p>
+                    <div class="tags">
+                        <span class="tag tag-engine">Unity</span>
+                        <span class="tag tag-lang">C#</span>
+                        <span class="tag">Game jam</span>
                     </div>
                 </div>
             </a>
