--- a/navbar.html
+++ b/navbar.html
@@ -23,6 +23,7 @@
                 <li><a href="../Projects/project">Mecco the Chameleon</a></li>
                 <li><a href="../Projects/project">AR Gpal</a></li>
                 <li><a href="../Projects/project">InControl</a></li>
+                <li><a href="/">Portfolio</a></li>
             </ul>
         </li>
     </ul>
