Added project details... and some tweaks

--- a/Projects/project copy.html
+++ b/Projects/project copy.html
@@ -22,7 +22,33 @@
         <div class="description">
             <h2>Project infomartion</h2>
             <p>A weather visualizer with some game elements. By using a weather API. Big bla bla you see here. The weather could be nice..... or not.</p>
-        </div>  
+        </div>
+
+        <!-- <ul>
+            <li><strong>Project Duration:</strong> 4 weeks</li>
+            <li><strong>Engine/Framework:</strong> Unity</li>
+            <li><strong>Programming Language(s):</strong> C#</li>
+            <li><strong>Development Methodology:</strong> Waterfall model</li>
+        </ul> -->
+
+        <div class="project-details">
+            <div class="detail-item">
+                <i class="fas fa-calendar-alt"></i>
+                <span><strong>Duration:</strong> 4 weeks</span>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-cogs"></i>
+                <span><strong>Engine:</strong> Unity</span>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-code"></i>
+                <span><strong>Language:</strong> C#</span>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-tasks"></i>
+                <span><strong>Workflow:</strong> Waterfall</span>
+            </div>
+        </div>
     </div>
 
     <hr>
