--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="main-content">
         <div class="text-blocks">
             <section class="intro">
-                <h2>Introductie</h2>
+                <h2>Introduction</h2>
                 <p>My name is Bas de Reus and I am <span id="age"></span> years old.<br>
                     I am a game developer living in Zaandam, the Netherlands.<br>
                     I have <span id="experience"></span> years of experience in programming.<br>
