--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2>Capture Graafsmeer</h2>
                 <p>Unity GPS mobile game made during MBO exam. Made for the Amsterdam goverment, explore the city with a photobook.</p>
                 <div class="tags">
+                    <span class="tag tag-new">New</span>
                     <span class="tag tag-engine">Unity</span>
                     <span class="tag tag-lang">C#</span>
                 </div>
