--- a/navbar.html
+++ b/navbar.html
@@ -9,20 +9,20 @@
         <li class="dropdown">
             <a href="#">Projects</a>
             <ul class="dropdown-content">
-                <li><a href="../Projects/project copy">Weather Visualizer</a></li>
-                <li><a href="../Projects/project">Platypus</a></li>
+                <li><a href="../Projects/project copy">Capture Graafsmeer</a></li>
                 <li><a href="../Projects/project">Maze Generator</a></li>
-                <li><a href="../Projects/project">Kara-oké</a></li>
-                <li><a href="../Projects/project">Capture Graafsmeer</a></li>
+                <li><a href="../Projects/project">Platypus</a></li>
+                <li><a href="../Projects/project">FPS Manager</a></li>
+                <!-- <li><a href="../Projects/project copy">Weather Visualizer</a></li> -->
                 <li><a href="../Projects/project">Operation Starfall</a></li>
                 <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
-                <li><a href="../Projects/project">FPS Manager</a></li>
-                <li><a href="../Projects/project">Tic tac toe</a></li>
+                <li><a href="../Projects/project">Kara-oké</a></li>
                 <li><a href="../Projects/project">The Lost Reel</a></li>
-                <li><a href="../Projects/project">Inner thoughts</a></li>
-                <li><a href="../Projects/project">Mecco the Chameleon</a></li>
+                <li><a href="../Projects/project">Tic tac toe</a></li>
                 <li><a href="../Projects/project">AR Gpal</a></li>
+                <li><a href="../Projects/project">Mecco the Chameleon</a></li>
                 <li><a href="../Projects/project">InControl</a></li>
+                <li><a href="../Projects/project">Inner thoughts</a></li>
                 <li><a href="/">Portfolio</a></li>
             </ul>
         </li>
