Added small tweaks

--- a/Projects/project copy.html
+++ b/Projects/project copy.html
@@ -49,6 +49,13 @@
                 <span><strong>Workflow:</strong> Waterfall</span>
             </div>
         </div>
+
+        <div class="project-links">
+            <ul class="link-list">
+                <li><a href="https://github.com/repository-link" target="_blank"><i class="fab fa-github"></i> GitHub Repository</a></li>
+                <li><a href="https://itch.io/game-link" target="_blank"><i class="fas fa-gamepad"></i> Play on Itch.io</a></li>
+            </ul>
+        </div>
     </div>
 
     <hr>
