--- a/Projects/Sample.html
+++ b/Projects/Sample.html
@@ -33,10 +33,10 @@
                 <i class="fas fa-calendar-week"></i>
                 <span><strong>Duration: </strong>4 years</span>
             </div>
-            <!-- <div class="detail-item">
+            <div class="detail-item">
                 <i class="fas fa-microchip"></i>
                 <span><strong>Engine: </strong>Unity</span>
-            </div> -->
+            </div>
             <div class="detail-item">
                 <i class="fas fa-cogs"></i>
                 <span><strong>Framework: </strong>SFML</span>
@@ -53,10 +53,10 @@
                 <i class="fas fa-user"></i>
                 <span><strong>Team Size: </strong>Solo</span>
             </div>
-            <!-- <div class="detail-item">
+            <div class="detail-item">
                 <i class="fas fa-users"></i>
                 <span><strong>Team Size: </strong>2 devs, 4 artists, 1 design</span>
-            </div> -->
+            </div>
         </div>
 
         <div class="project-links"></div>
@@ -113,8 +113,6 @@ private void LateUpdate()
             </figure>
         </div>
     </div>
-
-    <hr>
 
     <div id="footer-placeholder"></div>
 
