Added Starfall page and dynamic home page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <h2>Introduction</h2>
                 <p>My name is Bas de Reus and I am <span id="age"></span> years old.<br>
                     I am a game developer living in Zaandam, the Netherlands.<br>
-                    I have <span id="experience"></span> years of experience in programming.<br>
+                    I have <span id="experience"></span> years of experience in programming. Project before 2022 will not be shown here.<br>
                     At the moment I'm attending <a href="https://www.hku.nl/" class="link">HKU</a> for a <highlight-text>Bachelor of Creative Media and Game Technologies</highlight-text>, currently in year <span id="hku"></span>.<br>
                     Already have a <a href="https://www.ma-web.nl/" class="link">MBO</a> diploma for software development focused on game development.
                 </p>
@@ -51,7 +51,7 @@
                 <h2>Public Appearances</h2>
                 <p>On occasion, you’ll find me in a suit, whether I’m attending an event or delivering a speech on stage.<br><br>
                     During the 2023-2024 academic year, which was my final exam year for my MBO study, I had the honor of speaking at the official opening ceremony. You can check out my <a href="https://www.linkedin.com/posts/bas-de-reus_xr-hololens-mbo-activity-7107302399190413312-Glsz" class="link">LinkedIn post</a> for more details.<br><br>
-                    I also spoke on stage with a former colleague during the XR Innovation Showcases, where we highlighted new projects and prototypes. You can see a recap of the event in this <a href="https://www.linkedin.com/posts/bas-de-reus_aftermovie-xr-innovation-showcases-bekijk-activity-7144137402851196928-Rram" class="link">LinkedIn post</a>, where I speak first in the video.</p>
+                    I also spoke on stage with a former colleague during the <highlight-text>XR Innovation Showcases</highlight-text>, where we highlighted new projects and prototypes. You can see a recap of the event in this <a href="https://www.linkedin.com/posts/bas-de-reus_aftermovie-xr-innovation-showcases-bekijk-activity-7144137402851196928-Rram" class="link">LinkedIn post</a>, where I speak first in the video.</p>
             </section>
         </div>
 
