--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
                 <li><a href="../Projects/project">Platypus</a></li>
                 <li><a href="../Projects/project">FPS Manager</a></li>
                 <!-- <li><a href="../Projects/project copy">Weather Visualizer</a></li> -->
-                <li><a href="../Projects/project">Operation Starfall</a></li>
+                <li><a href="../Projects/StarFall.html">Operation Starfall</a></li>
                 <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
                 <li><a href="../Projects/project">Kara-oké</a></li>
                 <li><a href="../Projects/project">The Lost Reel</a></li>
