Added kara-oké page

--- a/Projects/DynamicSample.html
+++ b/Projects/DynamicSample.html
@@ -21,7 +21,7 @@
     <script src="../HtmlFetcher.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
-    <script src="starfallData.js"></script>
+    <script src="projectData.js"></script>
     <script src="createProjectContent.js"></script>
 </body>
 </html>
