--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script src="Index.js"></script>
     <script src="HtmlFetcher.js"></script>
     <script src="TagFilter.js"></script>
     <script src="ProjectsData.js"></script>
