--- a/navbar.html
+++ b/navbar.html
@@ -14,16 +14,16 @@
                 <li><a href="../Projects/project">Platypus</a></li>
                 <li><a href="../Projects/project">FPS Manager</a></li>
                 <!-- <li><a href="../Projects/project copy">Weather Visualizer</a></li> -->
-                <li><a href="../Projects/StarFall.html">Operation Starfall</a></li>
+                <li><a href="../Projects/OperationStarfall">Operation Starfall</a></li>
                 <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
-                <li><a href="../Projects/project">Kara-oké</a></li>
+                <li><a href="../Projects/Kara-oke">Kara-oké</a></li>
                 <li><a href="../Projects/project">The Lost Reel</a></li>
                 <li><a href="../Projects/project">Tic tac toe</a></li>
                 <li><a href="../Projects/project">AR Gpal</a></li>
-                <li><a href="../Projects/project">Mecco the Chameleon</a></li>
+                <!-- <li><a href="../Projects/project">Mecco the Chameleon</a></li> -->
                 <li><a href="../Projects/project">InControl</a></li>
                 <li><a href="../Projects/project">Inner thoughts</a></li>
-                <li><a href="/">Portfolio</a></li>
+                <li><a href="https://github.com/bas-boop/Portfolio2" target="_blank">Portfolio</a></li>
             </ul>
         </li>
     </ul>
