--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <div id="navbar-placeholder"></div>
 
     <section class="highlight-project">
-        <a href="underconstruction" class="highlight-container">
-            <img src="Covers/CaptureGraafsmeer.png" alt="Highlight Project">
+        <a href="/Projects/CaptureGraafsmeer" class="highlight-container">
+            <!-- remove blur ater project done -->
+            <img src="Covers/CaptureGraafsmeer.png" alt="Highlight Project" style="filter: blur(1.5px) saturate(0.5);">
             <div class="highlight-info">
                 <h2>Capture Graafsmeer</h2>
                 <p>Unity GPS mobile game made during MBO exam. Made for the Amsterdam goverment, explore the city with a photobook.</p>
