--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
         <li class="dropdown">
             <a href="#">Projects</a>
             <ul class="dropdown-content">
-                <li><a href="../Projects/project copy">Capture Graafsmeer</a></li>
+                <li><a href="../Projects/CaptureGraafsmeer">Capture Graafsmeer</a></li>
                 <li><a href="../Projects/project">Maze Generator</a></li>
                 <li><a href="../Projects/project">Platypus</a></li>
                 <li><a href="../Projects/project">FPS Manager</a></li>
