Added miscellaneous projects page + more small stuff

--- a/navbar.html
+++ b/navbar.html
@@ -18,12 +18,9 @@
                 <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
                 <li><a href="../Projects/Kara-oke">Kara-oké</a></li>
                 <li><a href="../Projects/project">The Lost Reel</a></li>
-                <li><a href="../Projects/project">Tic tac toe</a></li>
                 <li><a href="../Projects/project">AR Gpal</a></li>
-                <!-- <li><a href="../Projects/project">Mecco the Chameleon</a></li> -->
                 <li><a href="../Projects/project">InControl</a></li>
-                <li><a href="../Projects/project">Inner thoughts</a></li>
-                <li><a href="https://github.com/bas-boop/Portfolio2" target="_blank">Portfolio</a></li>
+                <li><a href="../Miscellaneous">Miscellaneous projects</a></li>
             </ul>
         </li>
     </ul>
