Added 2D/3D tags, all pages created, capturegraafsmeer progress

--- a/Projects/InControl.html
+++ b/Projects/InControl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bas de Reus: Operation Starfall</title>
+    <title>Bas de Reus: InControl</title>
     <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="projectpage.css">
@@ -21,7 +21,7 @@
     <script src="../HtmlFetcher.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
-    <script src="operationStarfall.js"></script>
+    <script src="inControl.js"></script>
     <script src="createProjectContent.js"></script>
 </body>
 </html>
