--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 <p>Unity GPS mobile game made during MBO exam. Made for the Amsterdam goverment, explore the city with a photobook.</p>
                 <div class="tags">
                     <span class="tag tag-new">New</span>
+                    <span class="tag tag-3d">3D</span>
                     <span class="tag tag-engine">Unity</span>
                     <span class="tag tag-lang">C#</span>
+                    <span class="tag">Mobile</span>
                 </div>
             </div>
         </a>
